Changes to be committed: 	modified:   app/Http/Controllers/AppointmentsController.php 	deleted:    app/Http/Controllers/PatientTreatmentsController.php 	modified:   app/Http/Controllers/PatientsController.php 	modified:   app/Http/Requests/StoreAppointmentsRequest.php 	modified:   app/Http/Requests/UpdateAppointmentsRequest.php 	deleted:    app/Http/Requests/UpdatePatient_TreatmentsRequest.php 	modified:   app/Models/Appointments.php 	deleted:    database/factories/PatientTreatmentsFactory.php 	modified:   database/migrations/2023_05_20_104007_create_appointments_table.php 	modified:   database/migrations/2023_05_20_104054_create_treatments_table.php 	deleted:    database/migrations/2023_05_20_104122_create_patient__treatments_table.php 	deleted:    database/seeders/PatientTreatmentsSeeder.php 	modified:   routes/api.php 	modified:   todo 	modified:   vue/Klinika-ui/src/views/AdminIndex.vue 	modified:   vue/Klinika-ui/src/views/HomeView.vue 	modified:   vue/Klinika-ui/src/views/PatientIndex.vue 	new file:   vue/Klinika-ui/src/views/User/RegisterPaiotment.vue 	new file:   vue/Klinika-ui/src/views/navbar.vue

--- a/todo
+++ b/todo
@@ -1,18 +1,11 @@
 usunąc patient__tritments
 dodac price w thretments
 dodac zabezpieczeni do route na podstawie roli
-//
-https://jwt.io/introduction
-https://www.digitalocean.com/community/tutorials/the-anatomy-of-a-json-web-token
-https://gchq.github.io/CyberChef/#recipe=From_Base64('A-Za-z0-9%2B/%3D',true)
-https://jwt.iohttps://dinochiesa.github.io/jwt
-https://github.com/PHP-Open-Source-Saver/jwt-auth
-https://laravel-jwt-auth.readthedocs.io/en/latest
-https://laravel-jwt-auth.readthedocs.io/en/latest/laravel-installation
-https://laravel-jwt-auth.readthedocs.io/en/latest/quick-start/
-https://laravel-jwt-auth.readthedocs.io/en/latest/auth-guard/
 
-//
 
 dodac wszedzie crud
 dodac kalnedarz
+
+
+jutro dodać
+jutro dodać dodawanie apoitments dla pacjentów
