Changes to be committed: 	modified:   app/Http/Controllers/AppointmentsController.php 	modified:   app/Http/Controllers/DentistsController.php 	modified:   app/Http/Controllers/UserController.php 	modified:   app/Http/Requests/UpdateAppointmentsRequest.php 	modified:   app/Http/Requests/UpdateDentistsRequest.php 	modified:   app/Models/Appointments.php 	modified:   routes/api.php 	modified:   todo 	modified:   vue/Klinika-ui/src/router/index.js 	new file:   vue/Klinika-ui/src/views/Admin/AddDentis.vue 	modified:   vue/Klinika-ui/src/views/Admin/EditDentists.vue 	new file:   vue/Klinika-ui/src/views/Admin/ShowAppotments.vue 	modified:   vue/Klinika-ui/src/views/Admin/ShowDentists.vue 	modified:   vue/Klinika-ui/src/views/AdminIndex.vue 	modified:   vue/Klinika-ui/src/views/Dentits/Appotemnts.vue 	modified:   vue/Klinika-ui/src/views/Dentits/DentsiSidebar.vue 	new file:   vue/Klinika-ui/src/views/Dentits/EditDentist.vue 	modified:   vue/Klinika-ui/src/views/sidebar.vue

--- a/todo
+++ b/todo
@@ -3,9 +3,14 @@ dodac price w thretments
 dodac zabezpieczeni do route na podstawie roli
 
 
-dodac wszedzie crud
-dodac kalnedarz
-
-
-jutro dodać
-jutro dodać dodawanie apoitments dla pacjentów
+dokonczyc admina
+dodac dodawanie dentysty
+walidacjia
+nazwy itp
+przyciski
+poprawic logowanie zeby niszczył token
+blokowanie routów
+poprawic tabelki
+dodac walidacjie która sprawdza czy nie jest data nie dodane w przeszłość
+i godzina jest w przeszłowsci
+usuwanie
