Changes to be committed: 	modified:   app/Http/Controllers/AppointmentsController.php 	modified:   app/Http/Controllers/DentistsController.php 	modified:   app/Http/Controllers/PatientsController.php 	modified:   app/Http/Requests/StoreAppointmentsRequest.php 	modified:   app/Models/Appointments.php 	modified:   database/migrations/2023_05_20_104007_create_appointments_table.php 	modified:   database/seeders/UserSeeder.php 	modified:   routes/api.php 	modified:   todo 	modified:   vue/Klinika-ui/src/router/index.js 	modified:   vue/Klinika-ui/src/views/Admin/AddDentis.vue 	modified:   vue/Klinika-ui/src/views/Admin/EditDentists.vue 	new file:   vue/Klinika-ui/src/views/Admin/EditPatients.vue 	modified:   vue/Klinika-ui/src/views/Admin/EditUsers.vue 	modified:   vue/Klinika-ui/src/views/Admin/ShowAppotments.vue 	modified:   vue/Klinika-ui/src/views/Admin/ShowDentists.vue 	new file:   vue/Klinika-ui/src/views/Admin/ShowPatients.vue 	new file:   vue/Klinika-ui/src/views/Admin/ShowTretments.vue 	modified:   vue/Klinika-ui/src/views/Admin/ShowUsers.vue 	renamed:    vue/Klinika-ui/src/views/sidebar.vue -> vue/Klinika-ui/src/views/Admin/sidebar.vue 	modified:   vue/Klinika-ui/src/views/AdminIndex.vue 	modified:   vue/Klinika-ui/src/views/Dentits/EditDentist.vue 	modified:   vue/Klinika-ui/src/views/User/EditPatientsData.vue 	modified:   vue/Klinika-ui/src/views/User/MakeApoitment.vue

--- a/todo
+++ b/todo
@@ -1,16 +1,29 @@
 usunąc patient__tritments
-dodac price w thretments
-dodac zabezpieczeni do route na podstawie roli
+
 
 
 dokonczyc admina
-dodac dodawanie dentysty
+-dodac crud dla tretments
+-usuwanie
+
+
+dokonczy user
+-graficzna poprawa appotemntes
+-wpis wszystki dentystów
+-dodac tabelke appotments
+
 walidacjia
-nazwy itp
-przyciski
-poprawic logowanie zeby niszczył token
-blokowanie routów
-poprawic tabelki
-dodac walidacjie która sprawdza czy nie jest data nie dodane w przeszłość
+-blokowanie routów
+-dodac walidacjie która sprawdza czy nie jest data nie dodane w przeszłość
 i godzina jest w przeszłowsci
-usuwanie
+-poprawic logowanie zeby niszczył token
+
+
+nazwy itp
+
+
+
+
+
+
+dodac zabezpieczeni do route na podstawie roli
