Changes to be committed: 	renamed:    app/Http/Controllers/AppointmentsController.php -> app/Http/Controllers/AppointmentController.php 	modified:   app/Http/Controllers/AuthController.php 	renamed:    app/Http/Controllers/DentistsController.php -> app/Http/Controllers/DentistController.php 	renamed:    app/Http/Controllers/PatientsController.php -> app/Http/Controllers/PatientController.php 	renamed:    app/Http/Controllers/RolesController.php -> app/Http/Controllers/RoleController.php 	renamed:    app/Http/Controllers/TreatmentsController.php -> app/Http/Controllers/TreatmentController.php 	modified:   app/Http/Controllers/UserController.php 	renamed:    app/Http/Requests/StoreAppointmentsRequest.php -> app/Http/Requests/StoreAppointmentRequest.php 	renamed:    app/Http/Requests/StoreDentistsRequest.php -> app/Http/Requests/StoreDentistRequest.php 	renamed:    app/Http/Requests/StorePatientsRequest.php -> app/Http/Requests/StorePatientRequest.php 	renamed:    app/Http/Requests/StoreRolesRequest.php -> app/Http/Requests/StoreRoleRequest.php 	renamed:    app/Http/Requests/StoreTreatmentsRequest.php -> app/Http/Requests/StoreTreatmentRequest.php 	renamed:    app/Http/Requests/UpdateAppointmentsRequest.php -> app/Http/Requests/UpdateAppointmentRequest.php 	renamed:    app/Http/Requests/UpdateDentistsRequest.php -> app/Http/Requests/UpdateDentistRequest.php 	renamed:    app/Http/Requests/UpdatePatientsRequest.php -> app/Http/Requests/UpdatePatientRequest.php 	renamed:    app/Http/Requests/UpdateRolesRequest.php -> app/Http/Requests/UpdateRoleRequest.php 	renamed:    app/Http/Requests/UpdateTreatmentsRequest.php -> app/Http/Requests/UpdateTreatmentRequest.php 	renamed:    app/Http/Resources/PatientsResource.php -> app/Http/Resources/PatientResource.php 	renamed:    app/Models/Appointments.php -> app/Models/Appointment.php 	renamed:    app/Models/Dentists.php -> app/Models/Dentist.php 	renamed:    app/Models/Patients.php -> app/Models/Patient.php 	renamed:    app/Models/

--- a/todo
+++ b/todo
@@ -1,16 +1,12 @@
-usunąc patient__tritments
 
+dodac tabelke na głownej stronie z prices
 
+poprawic bledy jezykowe
 
 dokonczyc admina
 -usuwanie
 -wykres
 
-
-dokonczy user
--graficzna poprawa appotemntes
--wpis wszystki dentystów
--dodac tabelke appotments
 
 walidacjia
 -blokowanie routów
@@ -18,6 +14,5 @@ walidacjia
 i godzina jest w przeszłowsci
 -poprawic logowanie zeby niszczył token
 
-nazwy itp
 
-dodac zabezpieczeni do route na podstawie roli
+naprawic bład w edit dentis
